@@ -1,12 +1,16 @@
 package org.openremote.controller.proxy;
 
 import java.io.IOException;
+import java.io.OutputStream;
 import java.net.InetSocketAddress;
+import java.net.Socket;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.channels.SelectionKey;
 import java.nio.channels.Selector;
 import java.nio.channels.SocketChannel;
+
+import javax.net.ssl.SSLSocketFactory;
 
 import org.apache.log4j.Logger;
 import org.openremote.controller.Constants;
@@ -16,52 +20,36 @@ public class ControllerProxy extends Proxy {
    private int controllerPort;
    private String controllerIP;
 
-   public ControllerProxy(SocketChannel srcSocket, String controllerIP, int controllerPort, int timeout)
+   public ControllerProxy(Socket srcSocket, String controllerIP, int controllerPort, int timeout)
          throws IOException {
       super(srcSocket, timeout);
       this.controllerIP = controllerIP;
       this.controllerPort = controllerPort;
    }
 
-   public static SocketChannel makeClientSocket(String urlString, String token, int timeout) throws IOException {
+   public static Socket makeClientSocket(String urlString, String token, int timeout) throws IOException {
       logger.info("Opening socket to beehive at "+urlString);
       URL url = new URL(urlString);
-      SocketChannel socket = SocketChannel.open();
-      socket.configureBlocking(false);
+      Socket socket = null;
       try{
-         logger.info("Trying to connect non-blocking");
-         if(socket.connect(new InetSocketAddress(url.getHost(), url.getPort()))){
-            logger.info("Got socket to beehive");
-            return socket;
+         if (urlString.startsWith("https")) {
+            logger.info("Use SSL socket");
+            SSLSocketFactory sslsocketfactory = (SSLSocketFactory)SSLSocketFactory.getDefault();
+            socket = sslsocketfactory.createSocket();
+         } else {
+            logger.info("Use plain socket");
+            socket = new Socket();
          }
-         logger.info("No luck, selecting");
-         Selector selector = Selector.open();
-         SelectionKey key = socket.register(selector, SelectionKey.OP_CONNECT);
-         ByteBuffer buffer = ByteBuffer.wrap(token.getBytes("ASCII"));
-         while(selector.select(timeout) > 0){
-            logger.info("Out of select");
-            // we only have one key really
-            selector.selectedKeys().clear();
-            if(key.isConnectable()){
-               logger.info("Connectable");
-               if(socket.finishConnect()){
-                  logger.info("Got socket to beehive");
-                  // now start writing the token
-                  key.interestOps(SelectionKey.OP_WRITE);
-               }
-            }
-            if(key.isWritable()){
-               logger.info("Writing token handshake to beehive");
-               socket.write(buffer);
-               if(!buffer.hasRemaining()){
-                  // we wrote it all, we're good
-                  return socket;
-               }
-               logger.info("More to write, let's loop");
-            }
-            logger.info("Back in select");
-         }
-         throw new IOException("Connection timed out");
+         logger.info("Trying to connect");
+         socket.connect(new InetSocketAddress(url.getHost(), url.getPort()));
+         logger.info("Got socket to beehive");
+         byte[] buffer = token.getBytes("ASCII");
+
+         logger.info("Writing token handshake to beehive");
+         OutputStream out = socket.getOutputStream();
+         out.write(buffer);
+         out.flush();
+         return socket;
       }catch(IOException x){
          // don't log the stack since we re-throw
          logger.info("Got an exception while connecting: "+x.getMessage());
@@ -76,7 +64,9 @@ public class ControllerProxy extends Proxy {
    }
 
    @Override
-   protected SocketChannel openDestinationSocket() throws IOException {
-      return SocketChannel.open(new InetSocketAddress(controllerIP, controllerPort));
+   protected Socket openDestinationSocket() throws IOException {
+      Socket socket = new Socket();
+      socket.connect(new InetSocketAddress(controllerIP, controllerPort));
+      return socket;
    }
 }
